new proj/src/objects/GE_MDM_Merge_History__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Specify API Names of &quot;Merged Account History&quot; custom object and its fields. In an EVENT of Merge, certain values from FROMDuns account are saved in this object before deleting the merged account.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <inlineHelpText>Enter the API name of the Account Name - lookup field</inlineHelpText>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <inlineHelpText>Enter the API Name of &apos;Billing City&apos; field</inlineHelpText>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <inlineHelpText>Enter the API Name of &apos;Billing Country&apos; field</inlineHelpText>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <inlineHelpText>Enter the API Name of &apos;Billing State/Province&apos; field</inlineHelpText>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <inlineHelpText>Enter the API Name of &apos;Billing Street&apos; field</inlineHelpText>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <inlineHelpText>Enter the API Name of &apos;Billing Zip/Postal Code&apos; field</inlineHelpText>
        <label>Billing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <inlineHelpText>Enter the API Name of &apos;DUNS Number&apos; field</inlineHelpText>
        <label>DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Status_Flag__c</fullName>
        <inlineHelpText>Enter the API Name of &apos;GE Status Flag&apos; field</inlineHelpText>
        <label>GE Status Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merged_Account_History_Name__c</fullName>
        <inlineHelpText>Enter the API Name of &apos;Merged Account History Name&apos; field</inlineHelpText>
        <label>Merged Account History Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merged_DUNS_Number__c</fullName>
        <inlineHelpText>Enter the API Name of Merged DUNS Number field</inlineHelpText>
        <label>Merged DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <inlineHelpText>Enter the API Name of the Merged Account History custom object</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_ID__c</fullName>
        <inlineHelpText>Enter the API Name of &apos;SFDC Legacy ID&apos; field</inlineHelpText>
        <label>SFDC Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <inlineHelpText>Enter the API Name of &apos;Shipping City&apos; field</inlineHelpText>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <inlineHelpText>Enter the API Name of &apos;Shipping Country&apos; field</inlineHelpText>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal_Code__c</fullName>
        <inlineHelpText>Enter the API Name of &apos;Shipping Postal Code&apos; field</inlineHelpText>
        <label>Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province__c</fullName>
        <inlineHelpText>Enter the API Name of &apos;Shipping State / Province&apos; field</inlineHelpText>
        <label>Shipping State / Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <inlineHelpText>Enter the API Name of &apos;Shipping Street&apos; field</inlineHelpText>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GE MDM - Merge History</label>
</CustomObject>